# fuckslurm

./: README.md  plan.yml  pyproject.toml
src/fuckslurm/: __about__.py  __main__.py  deamon.py  fuck.py  slurm_template.py  utils.py
